update openAPI
